[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.5", features = ["rand-no-std"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

lib-neural-network = { path = "../neural-network" }
lib-genetic-algorithm = { path = "../genetic-algorithm" }

[dev-dependencies]
test-case = "3.3.1"
approx = "0.5.1"
rand_chacha = "0.3.1"
