[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.34.1", features = ["rand-no-std"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }

lib-neural-network = { path = "../neural-network" }
lib-genetic-algorithm = { path = "../genetic-algorithm" }

[dev-dependencies]
test-case = "3.3.1"
approx = "0.5.1"
rand_chacha = "0.9.0"
